--- a/public/components/Cards/Cards.css
+++ b/public/components/Cards/Cards.css
@@ -17,8 +17,8 @@
     height: 180px;
     min-width: 200px;
 
-    margin-bottom: 3%;
-    padding: 0 1.5%;
+    margin-bottom: 30px;
+    padding: 0 10px;
 }
 
 .card {
