--- a/public/components/Header/Header.hbs
+++ b/public/components/Header/Header.hbs
@@ -8,5 +8,7 @@
     </form>
 </div>
 <div class="right">
-    <button type="submit" class="login">Войти</button>
+    <a href="/login">
+        <button type="submit" class="login">Войти</button>
+    </a>
 </div>
