--- a/public/components/Login/Login.hbs
+++ b/public/components/Login/Login.hbs
@@ -2,18 +2,18 @@
     {{#each inputs}}
         <div>
             <input type="{{this.type}}" placeholder="{{this.placeholder}}" name="{{this.name}}">
-            {{#unless ../isLogin}} <warning id="{{this.name}}">{{this.warn}}</warning> {{/unless}}
+            {{#unless ../isLogin}} <div class="warning" id="{{this.name}}">{{this.warn}}</div> {{/unless}}
         </div>
     {{/each}}
 
     {{#if isLogin}}
-        <warning></warning>
+        <div class="warning"></div>
         <button type="submit">Войти</button>
         <a href="/signup">
             <button name="signup">Зарегестрироваться</button>
         </a>
     {{else}}
-        <warning id="signup"></warning>
+        <div class="warning" id="signup"></div>
         <button name="signup" {{#unless isLogin}} type="submit" {{/unless}}>Зарегестрироваться</button>
     {{/if}}
 </form>
