Fixes - listeners - render login/signup

--- a/public/components/Header/Header.hbs
+++ b/public/components/Header/Header.hbs
@@ -3,7 +3,7 @@
         <button class="icon">Значок</button>
     </a>
     <form class="search-bar">
-        <input type="text" placeholder="Поиск" name="search">
+        <input maxlength="50" type="text" placeholder="Поиск" name="search">
         <button type="submit">Найти</button>
     </form>
 </div>
