design updated according to figma templates. Resolved merge conflicts. Fixed problem with adding inactive status to RePassword input field.

--- a/public/components/CardHeader/CardHeader.hbs
+++ b/public/components/CardHeader/CardHeader.hbs
@@ -9,8 +9,9 @@
         <button>Вок</button>
         <button>Паста</button>
         <button>Завтраки</button>
-        <button>Ещё ▼</button>
-
+        <div class="more">
+            <button>Ещё</button>
+        </div>
         <div class="sort">
             <span>Сортировка</span>
         </div>
