--- a/public/components/CardHeader/CardHeader.css
+++ b/public/components/CardHeader/CardHeader.css
@@ -14,11 +14,12 @@
     align-items: center;
     gap: 15px;
     padding: 10px 20px;
-    background-color: whitesmoke;
-    border-radius: 30px;
+    
+    background-color: var(--color-background-accent);
+    border-radius: var(--border-radius-large);
     flex-wrap: wrap;
 
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--shadow);
 }
 
 .filters button {
@@ -30,13 +31,13 @@
 }
 
 .filters button.active {
-    background: white;
-    border: 1px solid whitesmoke;
+    background: var(--color-light);
+    border: 1px solid var(--color-primary);
 }
 
 .filters button:hover {
-    background: white;
-    border: 1px solid whitesmoke;
+    background: var(--color-light);
+    border: 1px solid var(--color-primary);
 }
 
 .sort {
@@ -45,4 +46,44 @@
     align-items: center;
     gap: 8px;
     cursor: pointer;
+}
+
+.more {
+    position: relative;
+    display: inline-block;
+}
+
+.more::after {
+    content: '';
+    position: absolute;
+    right: 10px;
+    top: 40%;
+    width: 8px;
+    height: 8px;
+    border-right: 2px solid var(--color-accent);
+    border-bottom: 2px solid var(--color-accent);
+    transform: translateY(-50%) rotate(45deg);
+}
+
+.more button {
+    padding-right: 25px;
+}
+
+.sort {
+    position: relative;
+    padding-left: 20px;
+    cursor: pointer;
+}
+
+.sort::before {
+    content: '↑↓';
+    position: absolute;
+    left: 1px;
+    top: 40%;
+    transform: translateY(-50%);
+
+    color: var(--color-accent);
+
+    font-size: 16px;
+    font-weight: 900;
 }
