integration with backend. LogIn, SingUp works, and stores getted

--- a/public/components/Header/Header.hbs
+++ b/public/components/Header/Header.hbs
@@ -29,7 +29,7 @@
             <img src="/static/icons/checklist.png" alt="fav" class="button-image">
             <span class="button-text">Заказ</span>
         </a>
-        <a href="/profile" class="button-wrapper">
+        <a href="/logout" class="button-wrapper">
             <img src="/static/icons/user.png" alt="logo" class="logo">
         </a>
     {{else}}
