--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,7 +4,7 @@
 	align-items: center;
 	justify-self: center;
 	width: 90%;
-	padding: 20px;
+	padding: 1.25rem;
 	box-sizing: border-box;
 	background-color: var(--color-background-accent);
 	border-radius: var(--border-radius-large);
