--- a/src/components/IconButton/IconButton.module.scss
+++ b/src/components/IconButton/IconButton.module.scss
@@ -14,9 +14,10 @@
 	}
 
 	&__image {
-		width: 20px;
-		height: 20px;
+		width: 30px;
+		height: 30px;
 		object-fit: contain;
+		border-radius: 50%;
 		display: block;
 		margin: 0;
 	}
