avatar to navbar cover image

--- a/src/components/IconButton/IconButton.module.scss
+++ b/src/components/IconButton/IconButton.module.scss
@@ -14,9 +14,9 @@
 	}
 
 	&__image {
-		width: 30px;
-		height: 30px;
-		object-fit: contain;
+		width: 25px;
+		height: 25px;
+		object-fit: cover;
 		border-radius: 50%;
 		display: block;
 		margin: 0;
