--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -10,10 +10,12 @@
     margin: 1.5rem auto;
     justify-content: center;
     gap: 1rem;
+    flex: 1;
   }
 
   &__content {
     display: flex;
+    width: 100%;
     width: fit-content;
     margin: 1.5rem auto;
     box-sizing: border-box;
