--- a/src/components/AvatarForm/AvatarForm.module.scss
+++ b/src/components/AvatarForm/AvatarForm.module.scss
@@ -43,7 +43,7 @@
 		flex-direction: column;
 		align-items: center;
 		gap: 0.5rem;
-		color: var(--color-text-secondary);
+		color: var(--color-input-stroke);
 		font-size: 0.9rem;
 		text-align: center;
 	}
