--- a/src/pages/OrderPage/OrderPage.module.scss
+++ b/src/pages/OrderPage/OrderPage.module.scss
@@ -15,7 +15,7 @@
     &__form {
         display: flex;
         width: fit-content;
-        margin: 1.5rem auto;
+        margin: 0 auto;
         box-sizing: border-box;
         flex-wrap: wrap;
         justify-content: center;
