--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -18,7 +18,7 @@
     display: flex;
     width: 100%;
     width: fit-content;
-    margin: 1.5rem auto;
+    margin: 0 auto;
     box-sizing: border-box;
     flex-wrap: wrap;
     justify-content: center;
