--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	justify-self: center;
+	align-self: center;
 	width: 90%;
 	padding: 1.25rem;
 	box-sizing: border-box;
