--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -1,4 +1,7 @@
 .main-page {
+    display: flex;
+    flex-direction: column;
+
     &__container {
         display: flex;
         flex-wrap: wrap;
