--- a/src/components/CardsHeader/CardsHeader.module.scss
+++ b/src/components/CardsHeader/CardsHeader.module.scss
@@ -4,6 +4,7 @@
     justify-self: center;
     justify-content: center;
     align-items: center;
+    align-self: center;
 
     &__title {
         justify-self: center;
