--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -8,12 +8,11 @@
 	display: flex;
 	justify-content: flex-end;
 	z-index: 1;
-	max-width: 400px;
 
 	&__container {
 		width: 400px;
 		height: auto;
-		max-height: 80vh;
+		max-height: 800px;
 		background: white;
 		display: flex;
 		flex-direction: column;
